--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "moment": "^2.29.4",
+        "react": "^17.0.2",
+        "react-json-view": "^1.21.3"
     }
 }
